--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@
 title: Furry Logic Book
 email: mail@kdurrani.co.uk
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ Furry Logic, a book about animal physics, is out from 6 October 2016. From heat and light to electricity and magnetism, Furry Logic unveils the ways that animals exploit physics to eat, drink, mate and dodge death in their daily battle for survival.
 url: "http://furrylogicbook.com" # the base hostname & protocol for your site - used for feed.xml
 twitter_username: kdurrani
 github_username:  katjad
