--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,12 +1,12 @@
 development:
   backend:
     name: netlify-api
-    url: http://localhost:8080
+    url: http://localhost:4000
 
 production:
   backend:
     name: github-api
-    repo: owner/repo # Path to your Github repository
+    repo: https://github.com/katjad/furry-logic-content.git # Path to your Github repository
     branch: master # Branch to update (master by default)
 
 media_folder: "img/uploads" # Folder where user uploaded files should go
