--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,14 @@ collections:
   stories:
     title: stories
     output: true
+    defaults:
+      values: 
+      layout: story
 email: mail@kdurrani.co.uk
 description: 'Furry Logic, a book about animal physics, is out from 6 October 2016.
   From heat and light to electricity and magnetism, Furry Logic unveils the ways that
   animals exploit physics to eat, drink, mate and dodge death in their daily battle
-  for survival.
-
-'
+  for survival.'
 url: http://furrylogicbook.com
 twitter_username: kdurrani
 github_username: katjad
